---------------------------------------------
- 2021-05-10                                -
---------------------------------------------
.: WSW: BugFix - Link is not able to be clicked (WSW-113)
.: WSW: BugFix - Delivery fee show empty rather than not show (WSW-114)
.: WSW: Task - Add description in cart item (WSW-112)
.: WSW: Task - Remove "remove" button in Orders (WSW-111)

- v1.0.1092                                 -
---------------------------------------------
- 2021-05-08                                -
---------------------------------------------
.: WSW: BugFix - Not able to navigate to other page when invoice is not found (WSW-106)
.: WSW: Task - Add mobile size supported for order (WSW-105)
.: WSW: BugFix - Display hover remove icon in mobile size (WSW-100)
.: WSW: BugFix - Show no bank details message (WSW-106)
.: WSW: BugFix - Update delivery table style (WSW-106)

---------------------------------------------
- 2021-05-06                                -
---------------------------------------------
.: WSW: Task - CLONE - Pre-order through local website or link to other website (WSW-106)

---------------------------------------------
- 2021-04-18                                -
---------------------------------------------
.: WSW: Task - CLONE - Add delivery and price (WSW-107)

---------------------------------------------
- 2021-04-03                                -
---------------------------------------------
.: WSW: Task - Receipt module to list, filter receipts and the store page details (WSW-100)
.: WSW: Task - Update Favorite page UI (WSW-105)

- v1.0.1091                                 -
---------------------------------------------
- 2021-03-26                                -
---------------------------------------------
.: WSM: Task - Discount with showing minor symbol in invoice (WSM-316)

- v1.0.1090                                 -
---------------------------------------------
- 2021-03-11                                -