@@ -7,10 +7,6 @@ import { Injectable } from '@angular/core';
 export class InvoiceService {
 
   constructor(private http: HttpClient) { }
-
-  placeorder(obj) {
-    return this.http.post('/api/invoices/placeorder', obj);
-  }
   getInvoiceById(id, receiptId) {
     return this.http.get('/api/invoices/?s_id=' + id + '&r_id=' + receiptId);
   }
